--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/melaniegarnier/ms-jobmanager#readme",
   "dependencies": {
+    "@types/md5": "^2.1.32",
     "@types/uuid": "^3.4.3",
     "date-and-time": "^0.6.2",
+    "md5": "^2.2.1",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
   },
