--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/melaniegarnier/ms-jobmanager#readme",
   "dependencies": {
+    "@types/is-stream": "^1.1.0",
     "@types/md5": "^2.1.32",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node-dir": "0.0.32",
     "@types/uuid": "^3.4.3",
     "date-and-time": "^0.6.2",
+    "is-stream": "^1.1.0",
     "md5": "^2.2.1",
+    "mkdirp": "^0.5.1",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
   },
