--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "is-stream": "^1.1.0",
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
+    "table-parser": "^0.1.3",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
   },
