--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
+    "maxNodeModuleJsDepth" : 10,
     /* Basic Options */
     "target": "es6",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     // "lib": [],                             /* Specify library files to be included in the compilation. */
-    // "allowJs": true,                       /* Allow javascript files to be compiled. */
+    "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
@@ -56,9 +57,14 @@
   },
    "files": [ // path to the files to compile
         "./ts/src/index.ts",
+        "./ts/src/commonTypes.ts",
         "./ts/src/tests/jobManager_s1.ts",
         //"./ts/src/tests/md5.ts",
         "./ts/src/logger.ts",
-        "./ts/src/job.ts"
+        "./ts/src/job.ts",
+        "ts/src/lib/engine/index.ts",
+        "ts/src/lib/engine/localNixLike.ts",
+        "ts/src/lib/engine/profiles/index.ts",
+        "ts/src/lib/engine/profiles/localNixLike.ts"
     ]
 }
