--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/melaniegarnier/ms-jobmanager#readme",
   "dependencies": {
+    "@types/async": "^2.0.47",
     "@types/is-stream": "^1.1.0",
     "@types/md5": "^2.1.32",
     "@types/mkdirp": "^0.5.2",
     "@types/node-dir": "0.0.32",
     "@types/uuid": "^3.4.3",
+    "async": "^2.6.0",
     "date-and-time": "^0.6.2",
     "is-stream": "^1.1.0",
     "md5": "^2.2.1",
