--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@types/md5": "^2.1.32",
     "@types/mkdirp": "^0.5.2",
     "@types/node-dir": "0.0.32",
+    "@types/socket.io": "^1.4.31",
     "@types/uuid": "^3.4.3",
     "async": "^2.6.0",
     "date-and-time": "^0.6.2",
     "is-stream": "^1.1.0",
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
+    "socket.io": "^2.0.4",
+    "socket.io-stream": "^0.9.1",
     "table-parser": "^0.1.3",
     "uuid": "^3.2.1",
     "winston": "^2.4.0"
