--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-     "outDir": "./",                        /* Redirect output structure to the directory. */
+     "outDir": "./build/",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -59,16 +59,17 @@
         "./ts/src/index.ts",
         "./ts/src/commonTypes.ts",
         "./ts/src/tests/jobManager_s1.ts",
+        "./ts/src/tests/jobManager_s2.ts",
         //"./ts/src/tests/md5.ts",
         "./ts/src/logger.ts",
         "./ts/src/job.ts",
-        "ts/src/lib/engine/index.ts",
-        "ts/src/lib/engine/localNixLike.ts",
-        "ts/src/lib/engine/profiles/index.ts",
-        "ts/src/lib/engine/profiles/localNixLike.ts",
-        "ts/src/job-manager-client.ts",
-        "ts/src/job-manager-server.ts",
-        "ts/src/tests/jm-client.ts",
-        "ts/src/tests/jm-server.ts"
+        "./ts/src/lib/engine/index.ts",
+        "./ts/src/lib/engine/localNixLike.ts",
+        "./ts/src/lib/engine/profiles/index.ts",
+        "./ts/src/lib/engine/profiles/localNixLike.ts",
+       // "./ts/src/job-manager-client.ts",
+       // "./ts/src/job-manager-server.ts",
+        "./ts/src/tests/jm-client.ts",
+        "./ts/src/tests/jm-server.ts"
     ]
 }
