--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/melaniegarnier/ms-jobmanager#readme",
   "dependencies": {
     "@types/async": "^2.0.48",
+    "@types/deep-equal": "^1.0.1",
     "@types/is-stream": "^1.1.0",
     "@types/md5": "^2.1.32",
     "@types/mkdirp": "^0.5.2",
@@ -27,6 +28,7 @@
     "@types/uuid": "^3.4.3",
     "async": "^2.6.0",
     "date-and-time": "^0.6.2",
+    "deep-equal": "^1.0.1",
     "is-stream": "^1.1.0",
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
