--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     /* Basic Options */
     "target": "es6",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    // "lib": [],                             /* Specify library files to be included in the compilation. */
+    "lib": ["es2017"],                             /* Specify library files to be included in the compilation. */
     "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -67,6 +67,7 @@
         "./ts/src/lib/engine/localNixLike.ts",
         "./ts/src/lib/engine/profiles/index.ts",
         "./ts/src/lib/engine/profiles/localNixLike.ts",
+        "./ts/src/lib/pool.ts",
        // "./ts/src/job-manager-client.ts",
        // "./ts/src/job-manager-server.ts",
         "./ts/src/tests/jm-client.ts",
