--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,6 +72,7 @@
        // "./ts/src/job-manager-server.ts",
         "./ts/src/tests/jm-client.ts",
         "./ts/src/tests/jm-server.ts",
-        "./ts/src/tests/jobInputObject.ts"
+        "./ts/src/tests/jobInputObject.ts",
+        "./ts/src/lib/engine/profiles/slurm.ts",
     ]
 }
