more startup tests

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "commander": "^2.15.1",
     "date-and-time": "^0.6.2",
     "deep-equal": "^1.0.1",
+    "figures": "^2.0.0",
     "is-stream": "^1.1.0",
+    "log-update": "^2.3.0",
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
     "socket.io": "^2.0.4",
