--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ms-jobmanager",
   "version": "1.0.0",
   "description": "A micro-service to handle job instanciation and submission ",
-  "main": "index.js",
+  "main": "build/nativeJS/job-manager-client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
