--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "log-update": "^2.3.0",
     "md5": "^2.2.1",
     "mkdirp": "^0.5.1",
-    "ms-warehouse": "^1.1.3",
+    "ms-warehouse": "^1.1.4",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "socket.io-stream": "^0.9.1",
     "table-parser": "^0.1.3",
+    "through2": "^2.0.3",
     "uuid": "^3.2.1",
     "winston": "^3.0.0"
   },
