--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "socket.io-stream": "^0.9.1",
     "table-parser": "^0.1.3",
     "through2": "^2.0.3",
+    "tsc": "^1.20150623.0",
     "uuid": "^3.2.1",
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^9.4.6",
+    "@types/node": "^9.6.56",
     "@types/winston": "^2.4.4",
-    "typescript": "^2.7.2"
+    "typescript": "^3.9.3"
   }
 }
