sysSettingsKey in profile/slurm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-     "outDir": "./build/",                        /* Redirect output structure to the directory. */
+     "outDir": "./build_GL/",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -54,7 +54,8 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-  },
+  }
+  ,
    "files": [ // path to the files to compile
         "./ts/src/index.ts",
         "./ts/src/commonTypes.ts",
@@ -71,6 +72,8 @@
         "./ts/src/tests/jm-server.ts",
         "./ts/src/tests/jobInputObject.ts",
         "./ts/src/lib/engine/profiles/slurm.ts",
-        "./ts/src/tests/engineBasic.ts"
-    ]
+        "./ts/src/bin/startServer.ts",
+        "./ts/src/nativeJS/job-manager-client.js"
+    ],
+   //"include": ["./ts/src/nativeJS/*"]
 }
