--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A micro-service to handle job instanciation and submission ",
   "main": "build/nativeJS/job-manager-client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "which tsc; tsc",
+    "postbuild": "copyfiles -u 2 \"ts/src/nativeJS/job-manager-client.d.ts\" build"
   },
   "repository": {
     "type": "git",
@@ -41,7 +43,6 @@
     "socket.io-stream": "^0.9.1",
     "table-parser": "^0.1.3",
     "through2": "^2.0.3",
-    "tsc": "^1.20150623.0",
     "uuid": "^3.2.1",
     "winston": "^3.0.0"
   },
