--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/uuid": "^3.4.3",
     "async": "^2.6.0",
     "commander": "^2.15.1",
+    "copyfiles": "^2.4.1",
     "date-and-time": "^0.6.2",
     "deep-equal": "^1.0.1",
     "figures": "^2.0.0",
